# commit

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/ask/: mod.rs
src/cli/: mod.rs
src/gui/: mod.rs
src/tui/: mod.rs
templates/: alerting-update.txt  alerting_update.txt  api-change.txt  api-documentation.txt  api.txt  api_change.txt  api_documentation.txt  audit.txt  backup-creation.txt  backup_creation.txt  build.txt  cache-update.txt  cache_update.txt  cherry-pick.txt  cherry_pick.txt  chore.txt  ci.txt  cleanup.txt  compliance.txt  config.txt  data_migration.txt  database-migration.txt  dependency-removal.txt  dependency-update.txt  dependency_removal.txt  dependency_update.txt  deployment.txt  deprecate.txt  deprecation-notice.txt  docs.txt  experiment.txt  feat.txt  feature-addition.txt  feature-toggle.txt  feature_toggle.txt  fix.txt  hotfix.txt  hotpatch.txt  log-rotation-update.txt  log-update.txt  (+32 more)
templates/custom/: .gitignore
templates/en/: commit.tera
templates/es/: commit.tera
templates/fr/: commit.tera
templates/it/: commit.tera
